went backwards to restart on alignment issues

--- a/styles.css
+++ b/styles.css
@@ -1,51 +1,31 @@
 * {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+.image_1 {
+    height: 350px;
+     width: 450px;
+     display:flex;
+     align-items: center;
+     justify-content: flex-end;
+     justify-content: right;
+ }
 
-.section_1 {
-    color:#E5E7EB;
-    font-size: 18px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
+ .architecture_photos {
+    height: 100px;
+    width: 100px;
 }
-
-#image_1>img {
-    height: 150px;
-    width: 225px;
-    justify-content: flex-end;
-    align-items: auto;
-}
-
-#about {
-    width: 50%;
-    margin-left: 250px;
-    height: auto;
-    justify-content: flex-start;
-    align-items: auto;
-}
-/*still need to figure out alignment issue*/
-/*still need to figure out image alignment issue*/
-
-.architecture_photos {
-    height: 150px;
-    width: 150px;
-}
-
-.header_bar {
+header {
     color:white;
     display:flex;
     justify-content: space-between;
 }
-
 h1 {
     font-size: large;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 }
-
-#header_links {
+.header_links {
     list-style: none;
     color: white;
     display: flex;
@@ -55,48 +35,12 @@ h1 {
     padding: 10px;
     gap: 10px;
 }
-
 h2 {
     font-size: 48px;
-    color: white;
-    align-items: baseline;
-    justify-content: flex-start;
-}
+     color: white;
+     align-items: baseline;
+     justify-content: flex-start;
+ }
 
-button {
-    color:white;
-    background-color: #3882F6;
-}
-
-/*work on rounding out the button and making it look smoother*/
-
-h3 {
-    font: 36px extra-bold #1F2937;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    margin:0;
-    padding: 10px;
-}
-/*need to check on font and alignment of h3*/
-
-.architecture_list {
-    display: flex;
-    flex-direction: row;
-    margin: 0;
-    gap: 8px;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
-    border: 10px #3882F6;
-}
-
-figure figcaption {
-    text-align: center;
-}
-/*Figure out how to make this text centered under images*/
-
-.section_3 {
-    margin: 300px;
-    padding: 50px;
-}
+ button {
+     color:#3882F6;
